Fixed project images to stop stretching

--- a/app.css
+++ b/app.css
@@ -459,6 +459,7 @@ h2 {
 .project-photo {
   display: block;
   width: 100%;
+  object-fit: cover;
   border-radius: 15px;
 
   transition: opacity 500ms ease 0s;
